--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,17 +1,17 @@
 {
     "name": "Python Demo Environment",
-    "image": "shapeletsdev/training-slim:v2.2",
+    "image": "shapeletsdev/training-slim:v2.4",
     "workspaceFolder": "/training",
     "customizations": {
         "vscode": {
             "settings": {
                 "python.defaultInterpreterPath": "/training/.venv/bin/python"
-            },
+            }, 
             "extensions": [
                 "ms-python.python",
                 "ms-toolsai.jupyter"                
             ]
         }
     },
-    "postCreateCommand": "/training/.venv/bin/python -m pip install -r /training/requirements.txt"
+    "postCreateCommand": "/training/.venv/bin/python -m pip install -r /training/requirements.1.txt && /training/.venv/bin/python -m pip install -r /training/requirements.2.txt"
 }
